--- a/python.html
+++ b/python.html
@@ -81,7 +81,7 @@ function affichageConditionnel(bouton, id) {
   <!-- GENERALITES ======================================================== -->
 
   <h3 id="py_generalites"> Généralités </h3>
-
+ <p>TEST GIT</p>
   <p>Les fichiers Python ont pour extension <em>.py</em></p>
 
   <p>Les commentaires sont indiqués à l'aide de <strong>#</strong> pour une seule ligne ou <strong>"""   """</strong> pour plusieurs lignes.</p>
