--- a/python.html
+++ b/python.html
@@ -58,7 +58,7 @@ function affichageConditionnel(bouton, id) {
       venv</a></li>
     <li> <a href="#py_pycharm">Utilisation de PyCharm dans un environnement
       particulier</a></li>
-    <li> <a href="#py_saisie">Communication avec l'utilisateur</a> </li>
+    <li> <a href="#py_saisie">Communiquer avec l'utilisateur</a> </li>
     <li> <a href="#py_import_package">Importer un package</a> </li>
     <li> <a href="#py_random">Les packages et modules essentiels</a> </li>
     <li> <a href="#py_creer_package">Créer un package avec Poetry</a> </li>
@@ -73,6 +73,7 @@ function affichageConditionnel(bouton, id) {
     <li> <a href="#py_fonction">Les fonctions</a> </li>
     <li> <a href="#py_exception">La gestion des exceptions</a> </li>
     <li> <a href="#py_objet">La programmation objet</a> </li>
+    <li> <a href="#py_input">Input/Output</a> </li>
     <li> <a href="#py_pep">Respect du PEP8</a> </li>
   </ul>
 
@@ -81,7 +82,7 @@ function affichageConditionnel(bouton, id) {
   <!-- GENERALITES ======================================================== -->
 
   <h3 id="py_generalites"> Généralités </h3>
- <p>TEST GIT</p>
+
   <p>Les fichiers Python ont pour extension <em>.py</em></p>
 
   <p>Les commentaires sont indiqués à l'aide de <strong>#</strong> pour une seule ligne ou <strong>"""   """</strong> pour plusieurs lignes.</p>
@@ -262,7 +263,7 @@ pyenv local 3.8.0</code></pre>
 
   <!-- ======== LES METHODES DE COMMUNICATION ========= -->
 
-  <h3 id="py_communication">Les méthodes de communication</h3>
+  <h3 id="py_communication">Communiquer avec l'utilisateur</h3>
 
   <h4>Hello world</h4>
 
@@ -1005,7 +1006,7 @@ chaine = '#'.join(dico)</code></pre>
   'modele': 'Fiesta'
 }
 
-print(dico.setdefaut('marque', 'Citroen')
+print(dico.setdefault('marque', 'Citroen')
 print(dico.setdefault('couleur', 'blanche')</code></pre>
 
 
@@ -1322,6 +1323,19 @@ u = bb.decode('utf-8)</code></pre>
   <p>Pour encoder un string utf8 en bytes, on utilise :</p>
   <pre><code class="language-python">chaine = 'hello'
 bb = chaine.encode('utf-8)</code></pre>
+
+
+
+
+<h4>Parcourir un répertoire</h4>
+
+  <p>Afin d'afficher tous les éléments se trouvant dans un dossier de l'ordinateur grâce à Python :</p>
+
+  <pre><code class="language-python">from os import listdir
+for item in listdir('/home/user/monDossier'):
+  print(item)</code></pre>
+
+
 
 
 
