--- a/git.html
+++ b/git.html
@@ -262,6 +262,8 @@ git merge nomBranche</pre>
     <tr> <td> nettoyer le disque</td> <td><pre>sudo apt-get autoclean
 sudo apt-get clean
 sudo apt-get auroremove</pre></td></tr>
+    <tr> <td>copier monfichier.py</td> <td>cp /home/stephane/Téléchargements/monfichier.py /home/stephane/Documents/</td></tr>
+    <tr> <td> renommer monfichier en nouveaufichier</td> <td>mv monfichier  nouveaufichier</td></tr>
     <tr> <td> lancer l'interpréteur Python </td> <td><pre>python3</pre></td></tr>
     <tr> <td> supprimer <em>monApplication</em></td> <td><pre>sudo apt-get remove monApplication</pre></td></tr>
   </table>
