--- a/html.html
+++ b/html.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <title> Memento </title>
   <link rel="stylesheet" href="style.css">
@@ -7,22 +8,14 @@
   <meta charset="utf-8">
 </head>
 
-<!-- script de gestion des couleurs de code -->
+<!-- JavaScript de gestion des couleurs de code -->
 <script defer src="prism.js"></script>
 
 <body>
 
-<!--<header>
-  <div class="heroImage">
-    <div class="heroTexte">
-      <h2> HTML </h2>
-    </div>
-  </div>
-</header>-->
-
 <div id="bandeau">
   <div id="titre"> <h1> HTML </h1> </div>
-  <nav id="menu">
+  <nav>
     <div class="element"> <a href="index.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
@@ -56,29 +49,9 @@
 </aside>
 <section id="principal">
 
-    <div class="heroImage"></div>
+    <!--<div class="heroImage"></div>-->
+    <img src="fondTitre.jpg" alt="coding picture" height="200px" width="100%" margin-top="30%">
 
-<p style="font-weight:bold"> Table des matières :
-  <ul>
-    <li> <a href="#">Généralités sur le Web</a> </li>
-    <li> <a href="">Hello world</a> </li>
-    <li> <a href="#structure">Structure d'une page HTML</a> </li>
-    <li> <a href="#balise">Les balises</a> </li>
-    <li> <a href="#bloc">Gestion des blocs avec Flexbox</a> </li>
-    <li> <a href="#liste">Les listes</a> </li>
-    <li> <a href="#lien">Les liens</a> </li>
-    <li> <a href="#menus">Les menus</a> </li>
-    <li> <a href="#image">Insérer une image</a> </li>
-    <li> <a href="#figure">Insérer une figure</a> </li>
-    <li> <a href="#imageTexte">Insérer une image contenant un texte centré</a> </li>
-    <li> <a href="#video">Insérer une vidéo</a> </li>
-    <li> <a href="#citation">Insérer une citation</a> </li>
-    <li> <a href="#tableau">Insérer un tableau</a> </li>
-    <li> <a href="#formulaire">Créer un formulaire</a> </li>
-    <li> <a href="#verification">Vérifier la validité HTML5 du site</a> </li>
-    <li> <a href="#queries">Responsive design et media queries</a> </li>
-  </ul>
-</p>
 
 <!-- ===== STRUCTURE D'UNE PAGE HTML ===== -->
 
