--- a/html.html
+++ b/html.html
@@ -21,8 +21,9 @@
     <div class="element"> <a href="index.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-    <div class="element"> <a href="python.html">PYTHON</a> </div>
     <div class="element"> <a href="java.html">JAVA</a> </div>
+    <div class="element"> <a href="php.html">PHP</a> </div>
+    <div class="element"> <a href="python.html">PYTHON</a> </div>
     <div class="element"> <a href="c.html">C</a> </div>
     <div class="element"> <a href="git.html">Linux</a> </div>
   </nav>
@@ -35,9 +36,9 @@
         <a href="#hello">Hello world</a>
         <a href="#balise">Les balises</a>
         <a href="#flexbox">Flexbox</a>
-        <a href="#liste">Les listes</a>
-        <a href="#lien">Les liens</a>
         <a href="#menu">Les menus</a>
+        <a href="#lien">Les liens</a>
+        <a href="#liste">Les listes</a>
         <a href="#image">Les images</a>
         <a href="#figure">Les figures</a>
         <a href="#imageTexte">Image avec un texte centré</a>
@@ -45,9 +46,10 @@
         <a href="#citation">Les citations</a>
         <a href="#tableau">Les tableaux</a>
         <a href="#formulaire">Les formulaires</a>
-        <a href="#velidite">Validité HTML5 d'un site</a>
+        <a href="#verification">Validité HTML5 d'un site</a>
         <a href="#responsive">Responsive design</a>
-        <a href="">Media queries</a>
+        <a href="#querie">Media queries</a>
+        <a href="#cachees">Sections cachées</a>
     </nav>
 </aside>
 
@@ -61,7 +63,7 @@
 
     <!-- COMPRENDRE LE WEB -->
 
-    <h2>Comprendre le Web</h2>
+    <h2 id="web">Comprendre le Web</h2>
 
     <p>Internet est un réseau informatique mondial distribué, composé de millions de sous-réseaux publics ou privés. De ce fait, il n'existe pas de terminal qui centralise les informations. Internet utilise des applications de messagerie instantanée, de courrier électronique, de partage peer-to-peer, ainsi que le Web.</p>
 
@@ -193,7 +195,7 @@
 
     <!-- Architecture 3 tiers -->
 
-    <h3 id="archi3t"> Une architecture 3 tiers pour générer une page Web </h3>
+    <h3> Une architecture 3 tiers pour générer une page Web </h3>
 
     <p> L'interaction entre un client et un serveur est la suivante :
     <ul>
@@ -249,7 +251,7 @@
 
 
     <!-- HELLO WORLD -->
-    <h2>Hello World</h2>
+    <h2 id="hello">Hello World</h2>
 
   <p>Commençons par le traditionnel "Hello world". Contrairement à beaucoup de langages, HTML n'utilise pas de <strong>;</strong> à la fin des instructions, car celles-ci sont regroupées à l'intérieur de balises.</p>
   <pre><code class="language-html">&lt!DOCTYPE HTML&gt
@@ -300,6 +302,7 @@
 
     <p> Il est important de ne pas croiser les balises. En HTML les erreurs sont d'autant plus difficiles à détecter que le compilateur en autorise énormément avant de bloquer. Il part du principe que ce qu'il ne comprend pas, il ne l'affiche pas, mais n'interrompt pas pour autant l'exécution du code. Par exemple le code suivant est incohérent :</p>
     <pre><code class="language-html">&lth1&gt mon titre &ltp&gt ici se trouve un paragraphe &lt/h1&gt &lt/p&gt</code></pre>
+
 
   <!-- Les attributs -->
 
@@ -717,7 +720,7 @@
         </div>
 
         <div class="droite">
-          <pre>#conteneur{
+          <pre><code class="language-css">#conteneur{
   display: flex;
   flex-direction: row;
 }
@@ -732,7 +735,7 @@
 
 .bloc:nth-child(3){
   order: 3;
-}</pre><footer class="legendeCode">CSS</footer>
+}</code></pre><footer class="legendeCode">CSS</footer>
         </div>
 
       </div>
@@ -778,7 +781,6 @@
       </div>
       <br/>
 
-      <!-- doubler la taille d'un bloc par rapport à un autre -->
       <p><em>Agrandir certains blocs :</em></p>
       <p>On peut par exemple s'assurer que le Bloc 1 est deux fois plus grand que le Bloc 2.</p>
 
@@ -824,26 +826,19 @@
 
   <p> Les listes non ordonnées se définissent grâce aux balises :</P>
 
-  <div class="bloc">
-
-    <div class="gauche">
       <pre><code class="language-html">&ltul&gt
   &ltli&gt un élément de la liste &lt/li&gt
   &ltli&gt un autre élément de la liste &lt/li&gt
 &lt/ul&gt</code></pre><footer class="legendeCode">HTML</footer>
-    </div>
 
-    <div class="droite">
+
+    <p>qui affiche le résultat suivant</p>
       <p>
         <ul class="ulExemple">
           <li>un élément de la liste</li>
           <li>un autre élément de la liste</li>
         </ul>
-        <footer class="legendeCode">Affichage</footer>
       </p>
-    </div>
-
-  </div>
 
   <p>Les listes ordonnées se définissent à l'aide de la balise <strong>&ltol&gt</strong> à la place de la balise <strong>&ltul&gt</strong></p>
 
@@ -870,6 +865,7 @@ nom de la page &lt/a&gt</pre></td> </tr>
   </table>
 
   <!-- Lien vers une page -->
+
   <h3> Lien vers une page </h3>
 
     <p>Le nom de la page apparaît souligné dans le texte et, lorsqu'on clique dessus, on accède à la page dont l'adresse a été enregistrée dans l'attribut <strong>href</strong>.</p>
@@ -886,16 +882,19 @@ nom de la page &lt/a&gt</pre></td> </tr>
     </p>
 
   <!-- Lien vers une ancre -->
+
   <h3> Lien vers une ancre </h3>
 
     <p>Une ancre est un point de repère qu'on peut positionner dans une page HTML afin que l'utilisateur accède plus rapide à cet emplacement. Le lien se développe en deux étapes. On commence par créer une ancre à l'emplacement souhaité, puis on crée ensuite un lien contenant le caractère <strong>#</strong> dans l'attribut <strong>href</strong>.</p>
 
   <!-- Lien d'envoi d'un email -->
+
   <h3> Lien d'envoi d'un e-mail </h3>
 
     <p> Pour ouvrir automatiquement un gestionnaire d'e-mails en cliquant sur un lien, il faut définir l'adresse de destination du mail dans l'attribut <strong>href</strong>.</p>
 
   <!-- Lien pour télécharger un fichier -->
+
   <h3> Lien pour télécharger un fichier </h3>
 
     <p> Pour télécharger automatiquement un fichier en cliquant sur un lien, il faut indiquer le nom du fichier à télécharger. Cela suppose que ce fichier se trouve dans le répertoire courant.</p>
@@ -904,13 +903,13 @@ nom de la page &lt/a&gt</pre></td> </tr>
 
 <!-- ===== LES MENUS ===== -->
 
-<h2 id="menus"> Les menus </h2>
+<h2 id="menu"> Les menus </h2>
 
   <p> On crée un menu à l'aide de la balise <strong>&ltnav&gt</strong>.</p>
   <pre><code class="language-html">&ltnav id="menu"&gt
-  &ltdiv class="element"&gt &lta href="index.html"&gt NOTRE ETABLISSEMENT &lt/a&gt &lt/div&gt
-  &ltdiv class="element"&gt &lta href="lieu.html"&gt NOUS TROUVER &lt/a&gt &lt/div&gt
-  &ltdiv class="element"&gt &lta href="contact.html"&gt CONTACT &lt/a&gt &lt/div&gt
+ &ltdiv class="element"&gt &lta href="index.html"&gt NOTRE ETABLISSEMENT &lt/a&gt &lt/div&gt
+ &ltdiv class="element"&gt &lta href="lieu.html"&gt NOUS TROUVER &lt/a&gt &lt/div&gt
+ &ltdiv class="element"&gt &lta href="contact.html"&gt CONTACT &lt/a&gt &lt/div&gt
 &lt/nav&gt</code></pre><footer class="legendeCode">HTML</footer>
 
 
@@ -949,20 +948,20 @@ nom de la page &lt/a&gt</pre></td> </tr>
 
 <h2 id="imageTexte"> Insérer une image contenant un texte centré </h2>
 
-  <p>On peut utiliser deux blocs heroImage et heroTexte auquel on attribue la forme suivante dans le fichier style.css associé :</p>
+  <p>Pour créer une image défilante avec du texte centré à l'intérieur, on peut utiliser deux blocs heroImage et heroTexte auquel on attribue la forme suivante dans le fichier style.css associé :</p>
 
   <div class="bloc">
 
     <div class="gauche">
-      <pre>&ltdiv class="heroImage"&gt
+      <pre><code class="language-html">&ltdiv class="heroImage"&gt
   &ltdiv class="heroTexte"&gt
     &lth1&gt Texte centré &lt/h1&gt
   &lt/div&gt
-&lt/div&gt</pre><footer class="legendeCode">HTML</footer>
+&lt/div&gt</code></pre><footer class="legendeCode">HTML</footer>
     </div>
 
     <div class="droite">
-      <pre><code class="language-html">.heroImage{
+      <pre><code class="language-css">.heroImage{
   /* image dans laquelle on veut insérer des
   propriétés de texte */
   background-image: url("fondTitre.jpg");
@@ -1060,9 +1059,6 @@ nom de la page &lt/a&gt</pre></td> </tr>
 
 <h2 id="tableau"> Insérer un tableau </h2>
 
-  <div class="bloc">
-
-    <div class="gauche">
       <pre><code class="language-html">&lttable&gt
   &lttr&gt &ltth&gt TitreColonne1 &lt/th&gt
   &ltth&gt TitreColonne2 &lt/th&gt &lt/tr&gt
@@ -1070,18 +1066,17 @@ nom de la page &lt/a&gt</pre></td> </tr>
   &lttr&gt &lttd&gt texte &lt/td&gt &lttd&gt texte &lt/td&gt &lt/tr&gt
   &lttr&gt &lttd&gt texte &lt/td&gt &lttd&gt texte &lt/td&gt &lt/tr&gt
 &lt/table&gt</code></pre><footer class="legendeCode">HTML</footer>
-    </div>
 
-    <div class="droite">
+
+      <p>qui affiche le résultat suivant</p>
+
       <table>
         <tr> <th> TitreColonne1 </th> <th> TitreColonne2 </th> </tr>
         <tr> <td> texte </td> <td> texte </td> </tr>
         <tr> <td> texte </td> <td> texte </td> </tr>
         <tr> <td> texte </td> <td> texte </td> </tr>
-      </table><footer class="legendeCode">Affichage</footer>
-    </div>
+      </table>
 
-  </div>
 
   <p> Les différents éléments d'un tableau sont les suivants :</p>
   <table>
@@ -1102,9 +1097,6 @@ nom de la page &lt/a&gt</pre></td> </tr>
   <p> Un formulaire est une zone interactive dans laquelle les utilisateurs peuvent saisir des informations. Il s'agit donc d'un élément fondamental constituant une page HTML. </p>
   <p>Dans le cas d'un champ acceptant une réponse sur une seule ligne :</p>
 
-
-
-
       <pre><code class="language-html">&ltform method="post" action="pageDestination.py"&gt
   &ltp&gt Veuillez remplir les informations suivantes : &lt/p&gt
   &ltlabel for="identifiant"&gtidentifiant&lt/label&gt :
@@ -1115,13 +1107,11 @@ nom de la page &lt/a&gt</pre></td> </tr>
 
       <form method="post" action="">
         <p> Veuillez remplir les informations suivantes : </p>
-        <label for="identifiant">identifiant</label> : <input type="text" name="identifiant" class="identifiant"/>
-      </form><footer class="legendeCode">Affichage</footer>
+        <label for="">identifiant</label> : <input type="text" name="identifiant" class="identifiant"/>
+      </form>
 
 
   <p> Dans le cas d'un champ acceptant une réponse sur plusieurs lignes :</p>
-
-
 
 
       <pre><code class="language-html">&ltform method="post" action="pageDestination.py"&gt
@@ -1131,13 +1121,13 @@ nom de la page &lt/a&gt</pre></td> </tr>
   rows="6" cols="30"&gt&lt/textarea&gt
 &lt/form&gt</code></pre><footer class="legendeCode">HTML</footer>
 
-
+<p>qui affiche le résultat suivant</p>
 
       <form method="post" action="">
         <p> Veuillez remplir le formulaire ci-dessous : </p>
-        <label for="identifiant">Vos commentaires</label> :
+        <label for="">Vos commentaires</label> :
         <textarea name="identifiant" class="identifiant" rows="6" cols="30"></textarea>
-      </form><footer class="legendeCode">Affichage</footer>
+      </form>
 
 
   <p> Les différents attributs d'un formulaire sont les suivants :</p>
@@ -1170,13 +1160,12 @@ nom de la page &lt/a&gt</pre></td> </tr>
   </table>
 
   <!-- Les zones d'option -->
+
   <h3> Les zones d'option </h3>
 
     <p> En particulier, dans le cas d'une zone d'option, l'attribut <strong>name</strong> doit être identique pour toute la zone d'option, seul l'attribut <strong>id</strong> varie pour chaque champ :</p>
 
-    <div class="bloc">
 
-      <div class="gauche">
         <pre><code class="language-html">&ltform method="post" action="pageDestination.py"&gt
   &ltp&gt Question &ltp/&gt
   &ltinput type="radio" name="identite" id="nom"/&gt &ltlabel for="nom"&gt
@@ -1190,9 +1179,8 @@ nom de la page &lt/a&gt</pre></td> </tr>
   &ltinput type="radio" name="adherent" id="type"/&gt &ltlabel for="type"&gt
   type &lt/label&gt
 &lt/form&gt</code></pre><footer class="legendeCode"> HTML </footer>
-      </div>
 
-      <div class="droite">
+          <p>qui affiche le résultat suivant</p>
         <form method="post" action="pageDestination.py">
           <p> Question </p>
           <input type="radio" name="identite" id="nom"/> <label for="nom"> nom </label><br/>
@@ -1201,19 +1189,15 @@ nom de la page &lt/a&gt</pre></td> </tr>
           <p> Question </p>
           <input type="radio" name="adherent" id="contrat"/> <label for="contrat"> contrat </label><br/>
           <input type="radio" name="adherent" id="type"/> <label for="type"> type </label>
-        </form><footer class="legendeCode"> Affichage </footer>
-      </div>
-
-    </div>
+        </form>
 
   <!-- Les listes déroulantes -->
+
   <h3> Les listes déroulantes </h3>
 
     <p> Les listes déroulantes sont construites différemment :</p>
 
-    <div class="bloc">
 
-      <div class="gauche">
         <pre><code class="language-html">&ltform method="post" action="pageDestination.py"&gt
   &ltp&gt Question&lt/p&gt
   &ltselect name="choix" id="choix">
@@ -1222,26 +1206,21 @@ nom de la page &lt/a&gt</pre></td> </tr>
     &ltoption value="bleu"&gtbleu&lt/option&gt
   &lt/select&gt
 &lt/form&gt</code></pre><footer class="legendeCode">HTML</footer>
-      </div>
 
-      <div class="droite">
+
+      <p>qui produit l'affichage suivant</p>
         <form method="post" action="">
           <p> Question </p>
-          <select name="choix" id="choix">
+          <select name="choix">
             <option value="rouge">rouge</option>
             <option value="vert">vert</option>
             <option value="bleu">bleu</option>
           </select>
-        </form><footer class="legendeCode">Affichage</footer>
-      </div>
-
-    </div>
+        </form>
 
     <p> Il est possible de grouper les options affichées en utilisant la balise <strong>&ltoptgroup&gt</strong>. Dans ce cas, les noms de groupes offrent une indication mais ne peuvent pas être sélectionnés : </p>
 
-    <div class="bloc">
 
-      <div class="gauche">
         <pre><code class="language-html">&ltform method="post" action="pageDestination.py"&gt
   &ltp&gt Question&lt/p&gt
   &ltselect name="choix" id="choix">
@@ -1252,30 +1231,27 @@ nom de la page &lt/a&gt</pre></td> </tr>
     &lt/optgroup&gt
   &lt/select&gt
 &lt/form&gt</code></pre><footer class="legendeCode">HTML</footer>
-      </div>
 
-      <div class="droite">
+<p>qui produit l'affichage suivant</p>
+
         <form method="post" action="">
           <p> Question </p>
-          <select name="choix" id="choix">
+          <select name="choix" id="">
           <optgroup label="couleurs">
             <option value="rouge">rouge</option>
             <option value="vert">vert</option>
             <option value="bleu">bleu</option>
           </optgroup>
           </select>
-        </form><footer class="legendeCode">Affichage</footer>
-        </div>
+        </form>
 
-      </div>
+    <!-- Regrouper les champs d'un formulaire -->
 
   <h3> Regrouper les champs d'un formulaire </h3>
 
     <p> Il est possible de grouper les questions affichées en utilisant les balises <strong>&ltfieldset&gt</strong> pour délimiter l'encadrement et <strong>&ltlegend&gt</strong> pour donner un titre au cadre.</p>
 
-    <div class="bloc">
 
-      <div class="gauche">
         <pre><code class="language-html">&ltform method="post" action="pageDestination.py"&gt
   &ltfieldset&gt
     &ltlegend&gt sujet &lt/legend&gt
@@ -1287,9 +1263,9 @@ nom de la page &lt/a&gt</pre></td> </tr>
       &lt/select&gt
   &lt/fieldset&gt
 &lt/form&gt</code></pre><footer class="legendeCode">HTML</footer>
-      </div>
+    <p>qui produit l'affichage suivant</p>
 
-      <div class="droite">
+
         <form method="post" action="">
           <fieldset>
             <legend> sujet </legend>
@@ -1300,10 +1276,7 @@ nom de la page &lt/a&gt</pre></td> </tr>
               <option value="bleu">bleu</option>
             </select>
           </fieldset>
-        </form><footer class="legendeCode">Affichage</footer>
-      </div>
-
-    </div>
+        </form>
 
   <h3> Le bouton de validation </h3>
 
@@ -1354,6 +1327,13 @@ nom de la page &lt/a&gt</pre></td> </tr>
 <!-- ===== LES MEDIA QUERIES ===== -->
 
 <h2 id="queries"> Responsive design et media queries </h2>
+
+
+
+
+<!-- ===== LES SECTIONS CACHEES ====== -->
+
+<h2 id="cachees">Les sections cachées</h2>
 
   
   
