--- a/html.html
+++ b/html.html
@@ -93,6 +93,17 @@
 
     <div class="bloc">
         <div class="gauche">
+            <p>PHP signifie Hypertexte Preprocessor. Il s'agit d'un langage de programmation libre, interprété, orienté objet, principalement utilisé pour produire des pages Web dynamiques via un serveur HTTP.
+            Il est considéré comme une des bases de la création de sites Web dynamiques.</p>
+        </div>
+
+        <div class="droite">
+            <a href="php.html"><img src="images/php.png" width="90" height="80"></a>
+        </div>
+    </div>
+
+    <div class="bloc">
+        <div class="gauche">
             <p>JavaScript est un langage interprété qui se veut simple et dont le but initial était de rendre dynamiques et interactives les pages Web.</p>
         </div>
 
@@ -1282,29 +1293,21 @@ nom de la page &lt/a&gt</pre></td> </tr>
 
     <p> A la fin d'un formulaire, on doit utiliser un bouton de validation pour récupérer les réponses saisies par l'utilisateur afin de les exploiter et se rendre sur la page indiquée dans l'attribut <strong> action </strong>. On atteint ici les limites du langage HTML car ce traitement de l'information est réalisé par un autre langage, par exemple PHP, JavaScript, Java, Python, ...</p>
 
-    <div class="bloc">
 
-      <div class="gauche">
           <pre><code class="language-html">&ltinput type="submit" value="Valider"/&gt</code></pre><footer class="legendeCode">HTML</footer>
-      </div>
 
-      <div class="droite">
-        <input type="submit" value="Valider"/><footer class="legendeCode">Affichage</footer>
-      </div>
+<p>qui produit l'affichage suivant</p>
 
-    </div>
+        <input type="submit" value="Valider"/>
 
-    <div class="bloc">
+<p>Il existe également un bouton de remise à zéro :</p>
 
-      <div class="gauche">
           <pre><code class="language-html">&ltinput type="reset" value="Remise à zéro"/&gt</code></pre><footer class="legendeCode">HTML</footer>
-      </div>
 
-      <div class="droite">
-        <input type="reset" value="Remise à zéro"/><footer class="legendeCode">Affichage</footer>
-      </div>
+<p>qui produit l'affichage suivant</p>
 
-    </div>
+        <input type="reset" value="Remise à zéro"/>
+
 
 
 
