ajout de tkinter

--- a/css.html
+++ b/css.html
@@ -15,17 +15,19 @@
 
 <div id="bandeau">
   <h1> Memento </h1>
-  <h1> HTML </h1>
+  <h1> Css </h1>
 
   <nav>
-    <div class="element"> <a href="index.html">HTML</a> </div>
+    <div class="element"> <a href="html.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
     <div class="element"> <a href="java.html">JAVA</a> </div>
+    <div class="element"> <a href="kotlin.html">KOTLIN</a> </div>
+    <div class="element"> <a href="android.html">ANDROID</a> </div>
     <div class="element"> <a href="php.html">PHP</a> </div>
     <div class="element"> <a href="python.html">PYTHON</a> </div>
     <div class="element"> <a href="c.html">C</a> </div>
-    <div class="element"> <a href="git.html">Linux</a> </div>
+    <div class="element"> <a href="git.html">LINUX</a> </div>
   </nav>
 </div>
 
@@ -33,20 +35,18 @@
   <nav id="table_matiere">
     <a href="#structure">Structure</a>
     <a href="#forme">Mise en forme</a>
-    <a href="#proprietes">Propriétés</a>
+    <a href="#propriete">Propriétés</a>
     <a href="#heritage">Héritage</a>
+
   </nav>
 </aside>
 
 <section id="principal">
 
-  <!--image en tete-->
-
-  <img src="images/fondTitre.jpg" alt="coding picture" height="200px" width="100%" margin-top="30%">
 
 
 
-<!-- ===== STRUCTURE D'UNE PAGE CSS ===== -->
+  <!-- ===== STRUCTURE D'UNE PAGE CSS ===== -->
 
 <h2 id="structure"> Structure d'une page CSS </h2>
 
@@ -378,7 +378,7 @@ th, td{
 
 <!-- ===== NOTION D'HERITAGE ===== -->
 
-<h3 id="heritage"> Notion d'héritage </h3>
+<h2 id="heritage"> Notion d'héritage </h2>
 
   <p> La notion d'héritage est issue de la programmation orientée objet. En CSS, cela signifie que si on applique une propriété à une balise, toutes les balises qui se trouvent à l'intérieur appliqueront cette même propriété. On dit qu'elles héritent de cette propriété.
         Par exemple si on définit la couleur du texte à l'intérieur d'un paragraphe comme étant bleue, tous les mots mis en valeur par la balise <strong>em</strong> à l'intérieur d'un paragraphe seront bleus, sauf si on redéfinit spécifiquement la couleur de la balise <strong>em</strong>.</p>
