--- a/git.html
+++ b/git.html
@@ -23,13 +23,16 @@
 <div id="bandeau">
   <div id="titre"> <h1> Terminal </h1> </div>
   <nav>
-    <div class="element"> <a href="index.html">HTML</a> </div>
+    <div class="element"> <a href="html.html">HTML</a> </div>
     <div class="element"> <a href="css.html">CSS</a> </div>
     <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
     <div class="element"> <a href="java.html">JAVA</a> </div>
+    <div class="element"> <a href="kotlin.html">KOTLIN</a> </div>
+    <div class="element"> <a href="android.html">ANDROID</a> </div>
+    <div class="element"> <a href="php.html">PHP</a> </div>
     <div class="element"> <a href="python.html">PYTHON</a> </div>
     <div class="element"> <a href="c.html">C</a> </div>
-    <div class="element"> <a href="git.html">Terminal</a> </div>
+    <div class="element"> <a href="git.html">LINUX</a> </div>
   </nav>
 </div>
 
